--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "joi": "^17.12.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0"
