--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
